fix: palylists 코드 수정