@@ -1,6 +1,6 @@
 package com.techie.backend.playlist.service;
 
-import com.techie.backend.global.exception.playlist.InvalidVideoIdException;
+
 import com.techie.backend.global.exception.playlist.PlaylistNotFoundException;
 import com.techie.backend.global.exception.playlist.VideoNotFoundException;
 import com.techie.backend.global.exception.user.UserNotFoundException;
@@ -16,11 +16,12 @@ import com.techie.backend.user.service.UserService;
 import com.techie.backend.video.domain.Video;
 import com.techie.backend.video.repository.VideoRepository;
 import lombok.RequiredArgsConstructor;
+import org.modelmapper.ModelMapper;
+import org.modelmapper.PropertyMap;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -30,39 +31,29 @@ public class PlaylistServiceImpl implements PlaylistService {
     private final PlaylistVideoRepository playlistVideoRepository;
     private final VideoRepository videoRepository;
     private final UserService userService;
+    private final ModelMapper modelMapper;
 
     @Transactional
     @Override
     public Boolean createPlaylist(UserDetailsCustom userDetails, PlaylistRequest.CreatePlaylist request) {
         User user = userService.getUserFromSecurityContext(userDetails);
         Playlist playlist = Playlist.builder()
-                .name(request.getName())
+                .name(request.getPlaylistName())
                 .user(user)
                 .build();
         playlistRepository.save(playlist);
 
-        if (request.getVideoIds() == null || request.getVideoIds().isEmpty()) {
+        if (request.getVideoId() == null || request.getVideoId().isEmpty()) {
             return true;
         }
 
-        Set<String> existIds = videoRepository.findAllById(request.getVideoIds())
-                .stream()
-                .map(Video::getVideoId)
-                .collect(Collectors.toSet());
+        String videoId = request.getVideoId();
+        Video video = videoRepository.findByVideoId(videoId)
+                .orElseGet(() -> videoRepository.save(new Video(videoId)));
 
-        List<String> invalidIds = request.getVideoIds().stream()
-                .filter(id -> !existIds.contains(id))
-                .toList();
+        PlaylistVideo playlistVideo = new PlaylistVideo(playlist, video);
+        playlistVideoRepository.save(playlistVideo);
 
-        if (!invalidIds.isEmpty()) {
-            throw new InvalidVideoIdException();
-        }
-
-        List<Video> videos = videoRepository.findAllById(request.getVideoIds());
-
-        for (Video video : videos) {
-            playlist.addVideo(video);
-        }
         return true;
     }
 
@@ -70,18 +61,29 @@ public class PlaylistServiceImpl implements PlaylistService {
     public PlaylistResponse.Overview getPlaylists(UserDetailsCustom userDetails) {
         User user = userService.getUserFromSecurityContext(userDetails);
         List<Playlist> playlists = playlistRepository.findAllByUser(user);
+
         if (playlists.isEmpty()) {
             return new PlaylistResponse.Overview(List.of());
         }
+
         List<PlaylistResponse.Overview.PlaylistSummary> playlistSummaries = playlists.stream()
-                .map(playlist -> new PlaylistResponse.Overview.PlaylistSummary(
-                        playlist.getId(),
-                        playlist.getName()
-                ))
-                .toList();
+                .map(playlist -> {
+                    List<Video> videos = playlistVideoRepository.findVideosByPlaylist(playlist);
+
+                    List<String> videoNames = videos.stream()
+                            .map(Video::getTitle)
+                            .toList();
+
+                    return new PlaylistResponse.Overview.PlaylistSummary(
+                            playlist.getId(),
+                            playlist.getName(),
+                            videoNames.size());
+                })
+                .collect(Collectors.toList());
 
         return new PlaylistResponse.Overview(playlistSummaries);
     }
+
 
     @Override
     public PlaylistResponse.Details getPlaylistDetails(Long userId, Long playlistId, UserDetailsCustom userDetails) {
@@ -89,28 +91,27 @@ public class PlaylistServiceImpl implements PlaylistService {
         if (user == null || !user.getId().equals(userId)) {
             throw new UserNotFoundException();
         }
-
         Playlist playlist = playlistRepository.findByUserIdAndId(userId, playlistId);
-
         if (playlist == null) {
             throw new PlaylistNotFoundException();
         }
+        modelMapper.addMappings(new PropertyMap<Playlist, PlaylistResponse.Details>() {
+            @Override
+            protected void configure() {
+                map(source.getId(), destination.getPlaylistId());
+                map(source.getName(), destination.getPlaylistName());
+            }
+        });
 
-        PlaylistResponse.Details response = new PlaylistResponse.Details();
-        response.setPlaylistId(playlist.getId());
-        response.setPlaylistName(playlist.getName());
-
+        PlaylistResponse.Details response = modelMapper.map(playlist, PlaylistResponse.Details.class);
         List<PlaylistResponse.PlaylistDetails> videos = playlist.getPlaylistVideos().stream()
-                .map(playlistVideo -> {
-                    Video video = playlistVideo.getVideo();
-                    return new PlaylistResponse.PlaylistDetails(video);
-                })
-                .toList();
-
+                .map(playlistVideo -> modelMapper.map(playlistVideo.getVideo(), PlaylistResponse.PlaylistDetails.class))
+                .collect(Collectors.toList());
         response.setVideos(videos);
 
         return response;
     }
+
 
     @Transactional
     @Override
@@ -118,8 +119,8 @@ public class PlaylistServiceImpl implements PlaylistService {
         User user = userService.getUserFromSecurityContext(userDetails);
         Playlist playlist = playlistRepository.findByIdAndUser(playlistId, user);
 
-        if (request.getName() != null && !request.getName().isBlank()) {
-            playlist.updateName(request.getName());
+        if (request.getPlaylistName() != null && !request.getPlaylistName().isBlank()) {
+            playlist.updateName(request.getPlaylistName());
         }
 
         if (request.getAddVideoIds() != null) {
